[tool.poetry]
name = "scrolling-video-sheets"
version = "0.1.0"
description = ""
authors = ["enovid <emahn17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
opencv-python = "^4.5.1"
alive_progress = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
